--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   http: ^0.12.2
-
+  rake: ^1.0.1
+  document_analysis: ^0.1.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
