--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   rake: ^1.0.1
   document_analysis: ^0.1.3
   path_provider: ^1.6.16
+  flutter_spinkit: ^4.1.2+1
 dev_dependencies:
   flutter_test:
     sdk: flutter
