--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,10 @@ dependencies:
   path_provider: ^1.6.16
   flutter_spinkit: ^4.1.2+1
   google_fonts: ^1.1.0
+  cloud_firestore: ^0.14.0+2
+  firebase_core: ^0.5.0
+  firebase_auth: ^0.18.0+1
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
