--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cloud_firestore: ^0.14.0+2
   firebase_core: ^0.5.0
   firebase_auth: ^0.18.0+1
+  flutter_linkify: ^3.1.3
+  url_launcher: ^5.7.1
   
 dev_dependencies:
   flutter_test:
