--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   firebase_auth: ^0.18.0+1
   flutter_linkify: ^3.1.3
   url_launcher: ^5.7.1
+  string_similarity: ^1.1.0
+  edit_distance: ^0.4.1
   
 dev_dependencies:
   flutter_test:
