--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   url_launcher: ^5.7.1
   string_similarity: ^1.1.0
   edit_distance: ^0.4.1
+  googleapis: ^0.55.0
   
 dev_dependencies:
   flutter_test:
